--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
+    "react-tooltip": "^5.28.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
