--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/react-helmet": "^6.1.11",
     "@types/validator": "^13.12.2",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
