--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/validator": "^13.12.2",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
